--- a/docs-v2/src/global-css/themes/dark.css
+++ b/docs-v2/src/global-css/themes/dark.css
@@ -29,6 +29,8 @@
 
   --sui-playground-banner-background: rgb(30, 30, 30);
 
+  --sui-code-highlight-background: #322944;
+
   --sui-table-color: #fff;
   --sui-table-background: rgb(35, 35, 35);
   --sui-table-border-color: var(--sui-card-border-color);
@@ -44,8 +46,8 @@
  *
  * Ported for PrismJS by Marc Backes [@themarcba]
  */
-code[class*="language-"],
-pre[class*="language-"] {
+[data-theme="dark"] code[class*=language-],
+[data-theme="dark"] pre[class*=language-] {
   color: #f92aad;
   text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
   background: none;
@@ -57,125 +59,101 @@ pre[class*="language-"] {
   word-break: normal;
   word-wrap: normal;
   line-height: 1.5;
-
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
 }
-
-/* Code blocks */
-pre[class*="language-"] {
+[data-theme="dark"] pre[class*=language-] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
-
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+[data-theme="dark"] :not(pre) > code[class*=language-],
+[data-theme="dark"] pre[class*=language-] {
   background-color: transparent !important;
   background-image: linear-gradient(to bottom, #2a2139 75%, #34294f);
 }
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
+[data-theme="dark"] :not(pre) > code[class*=language-] {
   padding: 0.1em;
   border-radius: 0.3em;
   white-space: normal;
 }
-
-.token.comment,
-.token.block-comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
+[data-theme="dark"] .token.comment,
+[data-theme="dark"] .token.block-comment,
+[data-theme="dark"] .token.prolog,
+[data-theme="dark"] .token.doctype,
+[data-theme="dark"] .token.cdata {
   color: #8e8e8e;
 }
-
-.token.punctuation {
+[data-theme="dark"] .token.punctuation {
   color: #ccc;
 }
-
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.number,
-.token.unit,
-.token.hexcode,
-.token.deleted {
+[data-theme="dark"] .token.tag,
+[data-theme="dark"] .token.attr-name,
+[data-theme="dark"] .token.namespace,
+[data-theme="dark"] .token.number,
+[data-theme="dark"] .token.unit,
+[data-theme="dark"] .token.hexcode,
+[data-theme="dark"] .token.deleted {
   color: #e2777a;
 }
-
-.token.property,
-.token.selector {
+[data-theme="dark"] .token.property,
+[data-theme="dark"] .token.selector {
   color: #72f1b8;
   text-shadow: 0 0 2px #100c0f, 0 0 10px #257c5575, 0 0 35px #21272475;
 }
-
-.token.function-name {
+[data-theme="dark"] .token.function-name {
   color: #6196cc;
 }
-
-.token.boolean,
-.token.selector .token.id,
-.token.function {
+[data-theme="dark"] .token.boolean,
+[data-theme="dark"] .token.selector .token.id,
+[data-theme="dark"] .token.function {
   color: #fdfdfd;
-  text-shadow: 0 0 2px #001716, 0 0 3px #03edf975, 0 0 5px #03edf975,
-    0 0 8px #03edf975;
+  text-shadow: 0 0 2px #001716, 0 0 3px #03edf975, 0 0 5px #03edf975, 0 0 8px #03edf975;
 }
-
-.token.class-name {
+[data-theme="dark"] .token.class-name {
   color: #fff5f6;
-  text-shadow: 0 0 2px #000, 0 0 10px #fc1f2c75, 0 0 5px #fc1f2c75,
-    0 0 25px #fc1f2c75;
+  text-shadow: 0 0 2px #000, 0 0 10px #fc1f2c75, 0 0 5px #fc1f2c75, 0 0 25px #fc1f2c75;
 }
-
-.token.constant,
-.token.symbol {
+[data-theme="dark"] .token.constant,
+[data-theme="dark"] .token.symbol {
   color: #f92aad;
   text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
 }
-
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.selector .token.class,
-.token.builtin {
+[data-theme="dark"] .token.important,
+[data-theme="dark"] .token.atrule,
+[data-theme="dark"] .token.keyword,
+[data-theme="dark"] .token.selector .token.class,
+[data-theme="dark"] .token.builtin {
   color: #f4eee4;
   text-shadow: 0 0 2px #393a33, 0 0 8px #f39f0575, 0 0 2px #f39f0575;
 }
-
-.token.string,
-.token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
+[data-theme="dark"] .token.string,
+[data-theme="dark"] .token.char,
+[data-theme="dark"] .token.attr-value,
+[data-theme="dark"] .token.regex,
+[data-theme="dark"] .token.variable {
   color: #f87c32;
 }
-
-.token.operator,
-.token.entity,
-.token.url {
+[data-theme="dark"] .token.operator,
+[data-theme="dark"] .token.entity,
+[data-theme="dark"] .token.url {
   color: #67cdcc;
 }
-
-.token.important,
-.token.bold {
+[data-theme="dark"] .token.important,
+[data-theme="dark"] .token.bold {
   font-weight: bold;
 }
-
-.token.italic {
+[data-theme="dark"] .token.italic {
   font-style: italic;
 }
-
-.token.entity {
+[data-theme="dark"] .token.entity {
   cursor: help;
 }
-
-.token.inserted {
+[data-theme="dark"] .token.inserted {
   color: green;
 }
