--- a/docs-v2/src/global-css/themes/light.css
+++ b/docs-v2/src/global-css/themes/light.css
@@ -23,198 +23,138 @@
   --sui-search-placeholder-color: initial;
   --sui-search-category-background: var(--sui-accent-color-bold);
 
+  --sui-code-background: rgba(255, 255, 255, 0.75);
+  --sui-code-highlight-background: #f5f2fd;
+
   --sui-playground-banner-background: #fff;
 }
 
-.gatsby-highlight {
-  background: rgba(255, 255, 255, 0.75);
-  border-radius: 0.75rem;
+[data-theme="light"] .gatsby-highlight {
   box-shadow: 5px 8px 30px -10px rgba(50, 88, 130, 0.32);
-  overflow: hidden;
-  font-size: 0.85em !important;
 }
-
-.gatsby-highlight > pre {
-  margin: 0 !important;
-  padding: 0 1.5rem;
-  overflow-x: scroll;
-}
-
-.gatsby-highlight-code-line {
-  display: block;
-  margin-left: -1em;
-  margin-right: -1em;
-  padding-left: 1em;
-  background-color: #f5f2fd;
-}
-
-/**
- * VS theme by Andrew Lock (https://andrewlock.net)
- * Inspired by Visual Studio syntax coloring
- */
-
-code[class*="language-"],
-pre[class*="language-"] {
+[data-theme="light"] code[class*=language-],
+[data-theme="light"] pre[class*=language-] {
   color: #393a34;
   direction: ltr;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
-
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
 }
-
-pre > code[class*="language-"] {
+[data-theme="light"] pre > code[class*=language-] {
   font-size: 1em;
 }
-
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
+[data-theme="light"] pre[class*=language-]::-moz-selection,
+[data-theme="light"] pre[class*=language-] ::-moz-selection,
+[data-theme="light"] code[class*=language-]::-moz-selection,
+[data-theme="light"] code[class*=language-] ::-moz-selection {
   background: #c1def1;
 }
-
-pre[class*="language-"]::selection,
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection,
-code[class*="language-"] ::selection {
+[data-theme="light"] pre[class*=language-]::selection,
+[data-theme="light"] pre[class*=language-] ::selection,
+[data-theme="light"] code[class*=language-]::selection,
+[data-theme="light"] code[class*=language-] ::selection {
   background: #c1def1;
 }
-
-/* Code blocks */
-pre[class*="language-"] {
+[data-theme="light"] pre[class*=language-] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
+[data-theme="light"] :not(pre) > code[class*=language-] {
   padding: 0.2em;
   padding-top: 1px;
   padding-bottom: 1px;
   background: #f8f8f8;
   border: 1px solid #dddddd;
 }
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
+[data-theme="light"] .token.comment,
+[data-theme="light"] .token.prolog,
+[data-theme="light"] .token.doctype,
+[data-theme="light"] .token.cdata {
   color: #008000;
   font-style: italic;
 }
-
-.token.namespace {
+[data-theme="light"] .token.namespace {
   opacity: 0.7;
 }
-
-.token.string {
+[data-theme="light"] .token.string {
   color: #a31515;
 }
-
-.token.punctuation,
-.token.operator {
-  color: #393a34; /* no highlight */
+[data-theme="light"] .token.punctuation,
+[data-theme="light"] .token.operator {
+  color: #393a34;
+  /* no highlight */
 }
-
-.token.url,
-.token.symbol,
-.token.number,
-.token.boolean,
-.token.variable,
-.token.constant,
-.token.inserted {
+[data-theme="light"] .token.url,
+[data-theme="light"] .token.symbol,
+[data-theme="light"] .token.number,
+[data-theme="light"] .token.boolean,
+[data-theme="light"] .token.variable,
+[data-theme="light"] .token.constant,
+[data-theme="light"] .token.inserted {
   color: #36acaa;
 }
-
-.token.atrule,
-.token.keyword,
-.token.attr-value,
-.language-autohotkey .token.selector,
-.language-json .token.boolean,
-.language-json .token.number,
-code[class*="language-css"] {
+[data-theme="light"] .token.atrule,
+[data-theme="light"] .token.keyword,
+[data-theme="light"] .token.attr-value,
+[data-theme="light"] .language-autohotkey .token.selector,
+[data-theme="light"] .language-json .token.boolean,
+[data-theme="light"] .language-json .token.number,
+[data-theme="light"] code[class*=language-css] {
   color: #0000ff;
 }
-
-.token.function {
+[data-theme="light"] .token.function {
   color: #393a34;
 }
-.token.deleted,
-.language-autohotkey .token.tag {
+[data-theme="light"] .token.deleted,
+[data-theme="light"] .language-autohotkey .token.tag {
   color: #9a050f;
 }
-
-.token.selector,
-.language-autohotkey .token.keyword {
+[data-theme="light"] .token.selector,
+[data-theme="light"] .language-autohotkey .token.keyword {
   color: #00009f;
 }
-
-.token.important,
-.token.bold {
+[data-theme="light"] .token.important,
+[data-theme="light"] .token.bold {
   font-weight: bold;
 }
-
-.token.italic {
+[data-theme="light"] .token.italic {
   font-style: italic;
 }
-
-.token.class-name,
-.language-json .token.property {
+[data-theme="light"] .token.class-name,
+[data-theme="light"] .language-json .token.property {
   color: #2b91af;
 }
-
-.token.tag,
-.token.selector {
+[data-theme="light"] .token.tag,
+[data-theme="light"] .token.selector {
   color: #800000;
 }
-
-.token.attr-name,
-.token.property,
-.token.regex,
-.token.entity {
+[data-theme="light"] .token.attr-name,
+[data-theme="light"] .token.property,
+[data-theme="light"] .token.regex,
+[data-theme="light"] .token.entity {
   color: #ff0000;
 }
-
-.token.directive.tag .tag {
+[data-theme="light"] .token.directive.tag .tag {
   background: #ffff00;
   color: #393a34;
 }
-
-/* overrides color-values for the Line Numbers plugin
- * http://prismjs.com/plugins/line-numbers/
- */
-.line-numbers .line-numbers-rows {
+[data-theme="light"] .line-numbers .line-numbers-rows {
   border-right-color: #a5a5a5;
 }
-
-.line-numbers-rows > span:before {
+[data-theme="light"] .line-numbers-rows > span:before {
   color: #2b91af;
 }
-
-/* overrides color-values for the Line Highlight plugin
-* http://prismjs.com/plugins/line-highlight/
-*/
-.line-highlight {
+[data-theme="light"] .line-highlight {
   background: rgba(193, 222, 241, 0.2);
-  background: -webkit-linear-gradient(
-    left,
-    rgba(193, 222, 241, 0.2) 70%,
-    rgba(221, 222, 241, 0)
-  );
-  background: linear-gradient(
-    to right,
-    rgba(193, 222, 241, 0.2) 70%,
-    rgba(221, 222, 241, 0)
-  );
+  background: -webkit-linear-gradient(left, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
+  background: linear-gradient(to right, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
 }
